devo fare la preparazione alla verifica

--- a/RestFull-CRUD/views/index.pug
+++ b/RestFull-CRUD/views/index.pug
@@ -1,5 +1,22 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+  form(method='POST' action='/users')
+    div 
+      br 
+      label(for='Unit') Unit:
+      br
+      input(type='text', placeholder='Unit name' name='Unit')
+    div
+      br
+      label(for='Cost') Cost:
+      br
+      input(type='text', placeholder='xy' name='Cost')
+    div
+      br 
+      label(for='Hit_Speed') Hit speed:
+      br
+      input(type='text', placeholder='xy sec' name='Hit_Speed')
+      br
+    button(type='submit') Invia
