--- a/RestFull-CRUD/views/index.pug
+++ b/RestFull-CRUD/views/index.pug
@@ -7,6 +7,8 @@ block content
       a.active(href='/') Elenco Unità
     li
       a(href='/addUnit') Nuova Unità
+    li
+      a(href='/delUnit') Elimina Unità
   br
   each r in re
     h1 Unit: #{r.Unit}
