aggiunta veramente la delete

--- a/RestFull-CRUD/views/addUnit.pug
+++ b/RestFull-CRUD/views/addUnit.pug
@@ -6,7 +6,9 @@ block content
     li
       a.active(href='../') Elenco Unità
     li
-      a(href='/') Nuova Unità 
+      a(href='/addUnit') Nuova Unità 
+    li 
+      a(href='/delUnit') Elimina Unità
   br
   form(method='POST' action='/addUnit/add')
     div  
