--- a/RestFull-CRUD/views/dettagli.pug
+++ b/RestFull-CRUD/views/dettagli.pug
@@ -7,6 +7,8 @@ block content
       a.active(href='../') Elenco Unità
     li
       a(href='../addUnit') Nuova Unità
+    li 
+      a(href='/delUnit') Elimina Unità
   br
   img(src=`/img/${re.Unit}.png`)
   h1 Unit: #{re.Unit}
