--- a/RestFull-CRUD/views/addUnit.pug
+++ b/RestFull-CRUD/views/addUnit.pug
@@ -6,9 +6,11 @@ block content
     li
       a.active(href='../') Elenco Unità
     li
-      a(href='/addUnit') Nuova Unità 
+      a(href='../addUnit') Nuova Unità
     li 
       a(href='/delUnit') Elimina Unità
+    li 
+      a(href = '/upUnit') Aggiorna Unita
   br
   form(method='POST' action='/addUnit/add')
     div  
