--- a/RestFull-CRUD/views/dettagli.pug
+++ b/RestFull-CRUD/views/dettagli.pug
@@ -9,6 +9,8 @@ block content
       a(href='../addUnit') Nuova Unità
     li 
       a(href='/delUnit') Elimina Unità
+    li 
+      a(href = '/upUnit') Aggiorna Unita
   br
   img(src=`/img/${re.Unit}.png`)
   h1 Unit: #{re.Unit}
