--- a/RestFull-CRUD/views/index.pug
+++ b/RestFull-CRUD/views/index.pug
@@ -4,11 +4,13 @@ block content
   h1= title
   ul
     li
-      a.active(href='/') Elenco Unità
+      a.active(href='../') Elenco Unità
     li
-      a(href='/addUnit') Nuova Unità
-    li
+      a(href='../addUnit') Nuova Unità
+    li 
       a(href='/delUnit') Elimina Unità
+    li 
+      a(href = '/upUnit') Aggiorna Unita
   br
   each r in re
     h1 Unit: #{r.Unit}
